<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="37dp"
        android:text="@string/Generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="36dp"
        android:text="@string/Clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="40dp"
        android:text="@string/Enter_the_private_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputPK"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Enter_the_private_key"
        android:inputType="textPassword"
        android:textColorHint="#9B9B9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/inputRW"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Enter_reference_word"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="22dp"
        android:text="@string/Enter_reference_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPK" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/Enter_the_length_of_the_LUK_file"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#A7A7A7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRW"
        tools:visibility="visible" />

</android.support.constraint.ConstraintLayout>